fix `main` (bio text) not being horizontaly centered on mobile

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -26,7 +26,8 @@ body
 main
   display: block
   text-align: center
-  margin: 10px
+  margin: auto
+  padding: 10px
 
 img
   display: block
